# swimmy-fx-tribe

./: .env.template  .gitattributes  .gitignore  Cargo.toml  HANDOFF.md  Makefile  REFERENCE.md  agent.md  auto_journal_daemon.ps1  auto_journal_windows.py  brain-learning.lisp  brain-ritual.lisp  brain.lisp  brain_v3_legend.lisp  build_log.txt  build_log_2.txt  ci-test.sh  dreamer-test.lisp  dreamer2.lisp  dsl.lisp  error_log.txt  expert_panel_2_2026-02-14.md  genome.lisp  guardian  llm-integration.lisp  manual-backtest.lisp  market_data.csv  mixseek.lisp  nn_model.json  owners_guide.md  quality.lisp  report_status.sh  run.sh  run_journal.sh  run_validation_campaign.sh  school.lisp  shadow_predictions.json  start_journal_hidden.vbs  strategies.backup.json  strategies.json  (+14 more)
.agent/: agent.md  task.md
.cargo/: config.toml
.swimmy/: strategy_ranks.lisp
auto_journal/: ai_summarizer.py  auto-journal.service  screenshot_capture.py
backup/: p9-school-hunter-backup.lisp
config/: .env.systemd  .env.systemd.example  .env.template  discord_webhooks.json  heap.env  logrotate.conf
data/: backtest_cache.json  backtest_cache.json.bad.20260126_193823  backtest_cache.json.bad.20260126_202123  optimized_timeframes.json  shadow_predictions.json  system_metrics.json  wisdom_state.json
doc/: EXPERT_REVIEW.md  EXPERT_REVIEW_V2.md  FACTORY.md  GPT要件定義.txt  IMPLEMENTATION_CHECKLIST.md  KILL_CRITERIA_20260703.md  OPERATIONS.md  PHILOSOPHY_REVIEW.md  SYSTEM_ARCHITECTURE.md  architecture.md  birmingham_city_20260129.md  codex01.txt  design-memory-systems.md  discord.txt  jim1.txt  (+27 more)
(+1570 files in other folders)
