[package]
name = "guardian"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
zmq = "0.10.0"
lazy_static = "1.4"
rayon = "1.10"
rand = "0.8"
csv = "1.3"
chrono = "0.4.42"
serde-lexpr = "0.1"
nalgebra = "0.33"  # V47.0: Kalman filter matrix operations
